syntax = "proto3";

/*
    --Prerequisites--
    $ export GO111MODULE=on
    $ go get google.golang.org/protobuf/cmd/protoc-gen-go \
        google.golang.org/grpc/cmd/protoc-gen-go-grpc
    $ export PATH="$PATH:$(go env GOPATH)/bin"

*/

/*
Below commands create the pb file and the grpc.pb file
    protoc --proto_path=. --go_out=. --go_opt=paths=source_relative geo_fire_query/geo_fire_query.proto
    protoc --proto_path=. --go-grpc_out=. --go-grpc_opt=paths=source_relative geo_fire_query/geo_fire_query.proto
*/


option go_package = "tap.mars.org/geo_fire_query/geo_fire_query";


package geofirequery;

service GeoFireQuery {
  rpc GetBusinesses(BusinessRequest) returns (BusinessResponse) {}
}

enum FilterDistance {
    None = 0;
    One = 1;
    Five = 2;
    Twenty = 3;
}

enum OrderBy {
    Newest = 0;
    Favorite = 1;
    A_to_Z = 2;
    Z_to_A = 3;
}

enum Day {
    Monday = 0;
    Tuesday = 1;
    Wednesday = 2;
    Thursday = 3;
    Friday = 4;
    Saturday = 5;
    Sunday = 6;
}

message GeoPoint {
    double latitude = 1;
    double longitude = 2;
}

message BusinessRequest {
    GeoPoint geoPoint = 1;
    FilterDistance filterDistance = 2;
    OrderBy orderBy = 3;
}

message OperationalHours {
    Day day = 1;
    string start = 2;
    string end = 3;
}

message Address {
    string line1 = 1;
    string line2 = 2;
    string city = 3;
    string state = 4;
    string zip = 5;
}

message Distance {
    double distanceMi = 1;
    double distanceKm = 2;
}

message Business {
    string id = 1;
    string name = 2;
    int32 favorites = 3;
    Address address = 4;
    Distance distance = 5;
    repeated OperationalHours operationalHours = 6;
    string dateCreated = 7;
    string lastModified = 8;
}

message BusinessResponse {
    repeated Business businesses = 1;
}